# osv-scanner

./: .copyright-overrides.yml  .dockerignore  .editorconfig  .gitignore  .golangci-lint-version  .golangci.yaml  .goreleaser-nightly.yml  .goreleaser.yml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.json  .slsa-goreleaser.yml  .wwhrd.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE-3rdparty.csv  Makefile  README.md  USAGE.md  action.dockerfile  action.yml  cloudbuild.yaml  codecov.yml  diff-action.yml  exit_code_redirect.sh  go.mod  go.sum  go.work  go.work.sum  goreleaser-action.dockerfile  goreleaser.dockerfile  justfile  llms.txt  osv-scanner.toml  pom.xml  renovate.json  requirements.txt  result.json  (+3 more)
.gemini/: config.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  zizmor-config.yml  zizmor.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-fetch-upstream.yml  cassettes.yml  checks.yml  codeql-analysis.yml  dependencies.yml  docs-deploy.yml  goreleaser-nightly.yml  goreleaser.yml  license-check.yml  link-check-on-push.yml  link-check.yml  links.yml  lint-code.yaml  lint-docs.yaml  lint.yaml  on-publish.yml  osv-scanner-pr.yml  osv-scanner-reusable-pr.yml  osv-scanner-reusable-scheduled.yml  osv-scanner-reusable.yml  osv-scanner-scheduled.yml  osv-scanner-unified-action.yml  osv-scanner.yml  pr-check.yml  prerelease-check.yml  renovate-validator.yml  scorecards.yml  semantic.yml  slsa-goreleaser.yml  snapshots.yml  stackhawk.yml  staleness.yml  test-snap-can-build.yml  test.yml  tests.yml  title.yml  update-snapshots.yml  zizmor-analysis.yml  zizmor.yml
actions/deploy-docs/: action.yml
cmd/: go.mod  go.sum
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/: Gemfile  Pipfile  build.gradle  go.mod  gradle.lockfile  package-lock.json  packages.lock.json  pnpm-lock.yaml  pom.xml  pyproject.toml  requirements.txt
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/composer/: composer.json
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/gradle-groovy/: gradle.lockfile
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/gradle-kotlin/: gradle.lockfile
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/npm/: package-lock.json  package.json
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/nuget/: project.csproj
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/pnpm/: package.json
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/pnpm-9/: package.json
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/pnpm-9/modules/module_1/: package.json
cmd/osv-scanner/fixtures/encoding-integration-test-locks/Windows-1252/yarn/: package.json
docs/: 404.html  Gemfile  README.md  _config.yml  about.markdown  about.md  configuration-updating.md  configuration.markdown  configuration.md  contribute.markdown  contribute.md  docs.Dockerfile  experimental.md  github-action.md  guided-remediation.md  index.md  installation.markdown  installation.md  license-scanning.md  manual-plugin-selection.md  migrating-from-scalibr.md  migration-guide.md  offline-mode.md  osv-reporter.md  output.markdown  output.md  package-deprecation.md  scan-image.md  scan-source.md  supported_languages_and_lockfiles.md  usage.markdown  usage.md
experimental/: main.go  main_test.go
experimental/pythonreach/markdownify-0.14.1/: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.rst  pyproject.toml  shell.nix  tox.ini
experimental/pythonreach/markdownify-0.14.1/.github/workflows/: python-app.yml  python-publish.yml
experimental/pythonreach/markdownify-0.14.1/markdownify/: __init__.py  main.py
experimental/pythonreach/urllib3-2.5.0/: CHANGES.rst  README.md  pyproject.toml
experimental/pythonreach/urllib3-2.5.0/docs/: advanced-usage.rst  changelog.rst  conf.py  contributing.rst  index.rst  sponsors.rst  user-guide.rst  v2-migration-guide.rst
experimental/pythonreach/urllib3-2.5.0/docs/reference/: index.rst  urllib3.connection.rst  urllib3.connectionpool.rst  urllib3.exceptions.rst  urllib3.poolmanager.rst  urllib3.request.rst  urllib3.response.rst  urllib3.util.rst
experimental/pythonreach/urllib3-2.5.0/docs/reference/contrib/: emscripten.rst  index.rst
experimental/pythonreach/urllib3-2.5.0/dummyserver/: app.py  asgi_proxy.py  hypercornserver.py  socketserver.py  testcase.py
experimental/pythonreach/urllib3-2.5.0/dummyserver/certs/: README.rst
experimental/pythonreach/urllib3-2.5.0/test/: __init__.py  conftest.py  port_helpers.py  test_collections.py  test_compatibility.py  test_connection.py  test_connectionpool.py  test_exceptions.py  test_fields.py  test_filepost.py  test_http2_connection.py  test_no_ssl.py  test_poolmanager.py  test_proxymanager.py  test_queue_monkeypatch.py  test_response.py  test_retry.py  test_ssl.py  test_ssltransport.py  test_util.py  test_wait.py  tz_stub.py
experimental/pythonreach/urllib3-2.5.0/test/contrib/: test_pyopenssl.py  test_pyopenssl_dependencies.py  test_socks.py
experimental/pythonreach/urllib3-2.5.0/test/contrib/emscripten/: conftest.py  test_emscripten.py
experimental/pythonreach/urllib3-2.5.0/test/contrib/emscripten/templates/: pyodide-console.html
experimental/pythonreach/urllib3-2.5.0/test/with_dummyserver/: test_chunked_transfer.py  test_connection.py  test_connectionpool.py  test_https.py  test_no_ssl.py  test_poolmanager.py  test_proxy_poolmanager.py  test_socketlevel.py
generators/: generate-debian-versions.py  generate-packagist-versions.php  generate-pypi-versions.py  generate-rubygems-versions.rb
module4/: README.md  go.mod  go.sum  main.go  output.json  output.txt  verbose.txt
scripts/: build.sh  build_snapshot.sh  build_test_images.sh  generate_coverage_report.sh  report_uncleaned_snapshots.py  report_uncleaned_snapshots.sh  run_formatters.sh  run_lints.sh  run_local_docs.sh  run_tests.sh  test_env.dockerfile
snap/: snapcraft.yaml
tasks/: __init__.py  go.py  licenses.py  utils.py
(+2043 files in other folders)
