[tool.poetry]
name = "test_poetry"
version = "0.1.0"
description = ""
authors = ["Author <author@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.dev-dependencies]
numpy = "==1.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
